--- a/README
+++ b/README
@@ -1,5 +1,12 @@
 Это мое самописное API, опыт на Go у меня минимальный, в создании этого API мне помогала ИИ.
 
-Запуск API происходит с помощью команды "go run main.go"
-Запуск старта миграции происходит с помощью команды "go run main.go migrate"
+Запуск API происходит с помощью команды "go run cmd\server\main.go"
+Запуск старта миграции происходит с помощью команды "go run cmd\server\main.go migrate"
 !!Требуется ручной ввод в базе данных комнады из файла 001_init.sql для создания истории версий ДБ!!
+Пример POST запроса на API, на примере функции CreateOrder:
+1.Запускаем сервер
+2.Открываем командную строку, и вводим POST запрос:
+curl -X POST http://localhost:8080/order \
+-H "Content-Type: application/json" \
+-d '{"phone": "1234567890", "address": "123 Ваша улица St", "product_id": 1, "status": "pending"}'
+3.Выводится JSON-ответ с ID заказа(!!Так же вводить статус заказа для нового заказа не обязательно, он по умолчанию pending!!):
