--- a/README
+++ b/README
@@ -1,8 +1,22 @@
 Это мое самописное API, опыт на Go у меня минимальный, в создании этого API мне помогала ИИ.
+API имеет следующие функции.
+1.Обработка запросов на API и последующая работа с ДБ
+2.Имеется библиотека golang-migrate для управления миграциями, так же в миграциях используются транзакции для безопасной работы с ДБ.
+3.Имеется CLI интерфейс для управления миграциями.
+4.Имеется поддержка Docker для развертывания API.
+(5)Планируется middleware 
 
-Запуск API происходит с помощью команды "go run cmd\server\main.go"
-Запуск старта миграции происходит с помощью команды "go run cmd\server\main.go migrate"
-!!Требуется ручной ввод в базе данных комнады из файла 001_init.sql для создания истории версий ДБ!!
+Варианты запуска API:
+'go run cmd/server/main.go'
+Или же через CLI интерфейс:
+'go run cmd/cli/main.go server'
+для просмотра остальных команд используется:
+'go run cmd/cli/main.go'
+
+
+
+
+
 Пример POST запроса на API, на примере функции CreateOrder:
 1.Запускаем сервер
 2.Открываем командную строку, и вводим POST запрос:
@@ -10,3 +24,10 @@ curl -X POST http://localhost:8080/order \
 -H "Content-Type: application/json" \
 -d '{"phone": "1234567890", "address": "123 Ваша улица St", "product_id": 1, "status": "pending"}'
 3.Выводится JSON-ответ с ID заказа(!!Так же вводить статус заказа для нового заказа не обязательно, он по умолчанию pending!!):
+
+DOCKER: Осталось доделать подключение к БД, что то не работает и будет всё готово
+Заход в CLI:
+cd D:\guitars-shop-api
+docker-compose exec api sh
+docker-compose down -v
+docker-compose up --build -d
